# OneBillionRowsDataQuality

./: .flake8  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml
docs/: index.md
search/: search_index.json
